--- a/Basic_Banking_system/Home.html
+++ b/Basic_Banking_system/Home.html
@@ -16,6 +16,7 @@
     <style>
 body{
    background:url("img/home.jpg");
+   background-repeat:repeat-x;
   background-size:100%;
   background-position:-200px 0px;
 }
